--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,7 +6,7 @@
         android:title="Главная" />
     <item
         android:id="@+id/shop"
-        android:title="shop"
+        android:title="Корзина"
         android:icon="@drawable/cart"/>
     <item
         android:id="@+id/user"
