--- a/app/src/main/res/layout/activity_on_boarding_screen.xml
+++ b/app/src/main/res/layout/activity_on_boarding_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".on_boarding_screen"
+    tools:context=".on_board_inter"
     android:background="#FA4A0C">
     <View
         android:id="@+id/swipe"
