--- a/app/src/main/res/layout/on_boarding2.xml
+++ b/app/src/main/res/layout/on_boarding2.xml
@@ -30,29 +30,29 @@
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="687dp" />
 
+
     <Button
         android:id="@+id/signinbut"
         android:layout_width="160dp"
         android:layout_height="65dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="60dp"
         android:backgroundTint="@color/white_dark"
-        android:text="Sign In"
-        android:textSize="16dp"
 
+        android:text="Sign Up"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/signupbut"
         android:layout_width="160dp"
         android:layout_height="65dp"
-        android:layout_marginEnd="116dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="60dp"
         android:backgroundTint="@color/white_dark"
-        android:text="Sign Up"
+        android:text="Sign In"
         android:textColor="@color/black"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
